--- a/newtech.html
+++ b/newtech.html
@@ -524,8 +524,73 @@
         </article>
       </div>
     </section>
+<section class="mb-6">
 
-  
+</section>
+
+
+<!-- YouTube IR / Quarter Cards -->
+<section class="mb-8">
+<h3 class="text-lg font-semibold mb-3">유튜브 IR & 분기 요약</h3>
+<div class="grid gap-4 md:grid-cols-3">
+<!-- Q1 -->
+<article class="bg-white rounded-xl shadow p-4 border">
+<h4 class="font-semibold">1분기 실적 브리핑 (YouTube)</h4>
+<p class="text-sm text-slate-600 mt-1">-</p>
+<div class="mt-3 aspect-video bg-slate-100 rounded overflow-hidden">
+<iframe src="https://www.youtube.com/embed/HWTnY4D2E64?start=3703
+" title="Q1 IR" class="w-full h-full" frameborder="0" allowfullscreen></iframe>
+</div>
+<dl class="mt-3 text-xs text-slate-500">
+<dt class="font-medium">-</dt>
+<dd>-</dd>
+</dl>
+</article>
+
+
+<!-- Q2 -->
+<article class="bg-white rounded-xl shadow p-4 border">
+<h4 class="font-semibold">2분기 실적 브리핑 (YouTube)</h4>
+<p class="text-sm text-slate-600 mt-1">-</p>
+<div class="mt-3 aspect-video bg-slate-100 rounded overflow-hidden">
+<iframe src="https://www.youtube.com/embed/VIDEO_ID_Q2" title="Q2 IR" class="w-full h-full" frameborder="0" allowfullscreen></iframe>
+</div>
+<p class="mt-3 text-xs text-slate-500">-</p>
+</article>
+
+
+<!-- Q3 -->
+<article class="bg-white rounded-xl shadow p-4 border">
+<h4 class="font-semibold">3분기 실적 브리핑 (YouTube)</h4>
+<p class="text-sm text-slate-600 mt-1">-</p>
+<div class="mt-3 aspect-video bg-slate-100 rounded overflow-hidden">
+<iframe src="https://www.youtube.com/embed/VIDEO_ID_Q3" title="Q3 IR" class="w-full h-full" frameborder="0" allowfullscreen></iframe>
+</div>
+<p class="mt-3 text-xs text-slate-500">-</p>
+</article>
+</div>
+</section>
+ <section class="mb-8">
+<h3 class="text-lg font-semibold mb-3">제40회 정기 주주총회</h3>
+<div class="bg-white rounded-xl p-4 border shadow">
+<h4 class="font-semibold"></h4>
+<ol class="list-decimal ml-5 mt-2 text-sm text-slate-700 space-y-1">
+  <div class="relative w-full pb-[56.25%] h-0">
+  <iframe 
+    class="absolute top-0 left-0 w-full h-full rounded-xl"
+    src="https://www.youtube.com/embed/PzolHR0zDQs?start=1"
+    title="Q3 IR"
+    frameborder="0"
+    allowfullscreen>
+  </iframe>
+</div>
+<li>2025 경영성과 및 연간실적 보고</li>
+<li>핵심 사업 전략(PTFE·바이오·디스플레이 필터 등) 공유</li>
+<li>조직·지배구조 관련 공지(필요 시)</li>
+</ol>
+<p class="mt-3 text-xs text-slate-500">권장: 주총 하이라이트(발언 주요 문장, 사진, 링크)를 별도 카드로 확보해 뉴스레터에 노출</p>
+</div>
+</section> 
 
     <!-- =========================
          Call-to-action section
