--- a/tennews copy.html
+++ b/tennews copy.html
@@ -692,6 +692,121 @@
      
     </div>
 </section>
+<!-- 4. 시노펙스 2026 미리보기 (Leaders' Insight) -->
+<section id="leaders" class="section py-20 bg-white">
+  <div class="max-w-6xl mx-auto px-4">
+
+    <!-- 섹션 헤더 -->
+    <div class="text-center mb-16" data-aos="fade-up">
+      <h2 class="text-3xl md:text-4xl font-bold text-gray-900 mb-3">
+        4. 시노펙스 2026 미리보기 (Leaders’ Insight)
+      </h2>
+      <p class="text-base md:text-lg text-gray-600">
+        두 리더의 시각으로 미리 보는 2026년 시노펙스의 방향성과 실행 전략
+      </p>
+    </div>
+
+    <!-- CEO 인터뷰 카드 -->
+    <div class="rounded-2xl p-8 md:p-10 shadow-lg bg-gradient-to-br from-blue-50 to-white mb-14 card"
+         data-aos="fade-up" data-aos-delay="100">
+      <h3 class="text-2xl md:text-3xl font-bold text-gray-900 mb-6">
+        4-1. CEO 인터뷰 — 2026을 여는 핵심 키워드
+      </h3>
+
+      <p class="text-gray-700 leading-relaxed mb-6">
+        2026년의 시노펙스는 “기술 기반 성장(Growth by Technology)”이라는 큰 축 아래,
+        글로벌 시장과 신사업 영역에서 더욱 확장된 전략을 실행해 나간다.
+        CEO는 이를 위해 **성장축 재정의**, **글로벌 전략 고도화**, **신사업 강화**라는
+        세 가지 핵심 키워드를 제시했다.
+      </p>
+
+      <div class="space-y-6">
+        <!-- 성장축 -->
+        <div>
+          <h4 class="text-xl font-semibold text-blue-700 mb-2">① 성장축</h4>
+          <p class="text-gray-700 leading-relaxed">
+            시노펙스의 성장은 단순한 매출 확대가 아니라,
+            핵심 기술 자산을 기반으로 한 ‘질적 성장’에 초점을 맞춘다.
+            반도체·바이오·에너지 소재 등 고성장 분야에서의 기술 경쟁력을 강화하며
+            이를 실제 매출과 사업 확장으로 연결하는 체계를 확립하고자 한다.
+          </p>
+        </div>
+
+        <!-- 글로벌 전략 -->
+        <div>
+          <h4 class="text-xl font-semibold text-blue-700 mb-2">② 글로벌 및 시장 전략</h4>
+          <p class="text-gray-700 leading-relaxed">
+            글로벌 시장 진출은 2026년의 가장 중요한 중점 과제 중 하나다.
+            북미·유럽 주요 고객사와의 파트너십 강화, 해외 전시·인증·현지화 전략을 통해
+            ‘글로벌 표준 기술 기업’으로서의 위상을 공고히 할 계획이다.
+          </p>
+        </div>
+
+        <!-- 신사업 -->
+        <div>
+          <h4 class="text-xl font-semibold text-blue-700 mb-2">③ 신사업 방향</h4>
+          <p class="text-gray-700 leading-relaxed">
+            차세대 멤브레인, 의료기기, 친환경 소재 등 신사업 영역은
+            연구개발 중심에서 실제 사업화 단계로 본격 전환된다.
+            특히 의료기기 분야에서는 CE MDR 기반의 제품군 확장,
+            산업용 필터 분야에서는 탄소중립·고효율 분야로의 확대가 예정되어 있다.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <!-- 부회장 인터뷰 카드 -->
+    <div class="rounded-2xl p-8 md:p-10 shadow-lg bg-gradient-to-br from-blue-50 to-white"
+         data-aos="fade-up" data-aos-delay="200">
+      <h3 class="text-2xl md:text-3xl font-bold text-gray-900 mb-6">
+        4-2. 부회장 인터뷰 — 실행 전략 & 조직 운영 계획
+      </h3>
+
+      <p class="text-gray-700 leading-relaxed mb-6">
+        부회장은 2026년을 “실행의 해(Year of Execution)”로 규정하며,
+        조직 운영·생산·기술·품질 중심의 실행 전략을 제시했다.
+        특히 각 사업부가 자율성과 속도를 확보할 수 있는 내부 시스템 구축에
+        가장 큰 비중을 두고 있다.
+      </p>
+
+      <div class="space-y-6">
+        <!-- 조직·사업부 지원 전략 -->
+        <div>
+          <h4 class="text-xl font-semibold text-blue-700 mb-2">① 조직·사업부 지원 전략</h4>
+          <p class="text-gray-700 leading-relaxed">
+            조직 구조를 보다 민첩하게 재편하고, 각 부문의 실행 책임과 권한을 강화하는 방향으로 운영된다.
+            사업부 간 협업 프로세스를 단순화하고, 리포팅 구조를 효율화해 속도 중심의 체계를 만든다.
+          </p>
+        </div>
+
+        <!-- 생산·기술·품질 실행 전략 -->
+        <div>
+          <h4 class="text-xl font-semibold text-blue-700 mb-2">② 생산·기술·품질 중심 실행 플랜</h4>
+          <p class="text-gray-700 leading-relaxed">
+            생산 효율 향상, 공정 최적화, AI 기반 품질 관리 등 핵심 역량을 결합해
+            글로벌 수준의 운영 체계를 구축하는 것이 목표다.
+            이를 위해 전 사업장의 스마트팩토리화, 공정 자동화 확대,
+            품질 데이터 기반의 의사결정 체계가 본격 적용될 예정이다.
+          </p>
+        </div>
+
+        <!-- 인재·프로세스 강화 -->
+        <div>
+          <h4 class="text-xl font-semibold text-blue-700 mb-2">③ 인재·프로세스 강화 전략</h4>
+          <p class="text-gray-700 leading-relaxed">
+            인재 확보와 육성은 2026년 전략의 핵심이다.
+            기술 인력 중심의 채용 확대와 더불어,
+            역량 기반 교육 체계를 재정비해 조직의 전문성을 지속적으로 강화한다.
+            또한 R&R 명확화, 공정표준화, 내부 협업 툴 고도화를 통해
+            업무 프로세스의 안정성과 속도를 모두 끌어올리는 방향으로 개선이 이루어진다.
+          </p>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</section>
+
 
 
      
